--- a/p2pNetwork/omnetpp.ini
+++ b/p2pNetwork/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-network = p2pNetwork
+network = p2pNetwork#nuestra red
 sim-time-limit = 1s
 
 # Visualization and animation
@@ -14,14 +14,60 @@ sim-time-limit = 1s
 **.vector-recording = true
 
 # Optional: tune fiber delay and STM level here
-*.lteA.stmLevel = 1
+*.lteA.stmLevel = 16 #nivel que queremos stm-n 
+*.lteB.stmLevel = 16
+*.lteA.numTributaries = 1
+*.lteB.numTributaries = 1
+
+# Traffic generation
+*.sourceA.packetInterval = 125us
+*.sourceA.packetSize =  38880# in bytes
+
+
+*.sourceB.packetInterval = 125us
+*.sourceB.packetSize =  38880# in bytes
+
+[STM1]
+*.lteA.stmLevel = 1 #nivel que queremos stm-n 
 *.lteB.stmLevel = 1
 *.lteA.numTributaries = 1
 *.lteB.numTributaries = 1
 
 # Traffic generation
-*.sourceA.packetInterval = 50us
-*.sourceA.packetSize = 3000 # in bytes
+*.sourceA.packetInterval = 125us
+*.sourceA.packetSize =  2425# in bytes
+
+
+*.sourceB.packetInterval = 125us
+*.sourceB.packetSize =  2425# in bytes
+
+[STM4]
+*.lteA.stmLevel = 4 #nivel que queremos stm-n 
+*.lteB.stmLevel = 4
+*.lteA.numTributaries = 1
+*.lteB.numTributaries = 1
+
+# Traffic generation
+*.sourceA.packetInterval = 125us
+*.sourceA.packetSize =  9720# in bytes
+
+
+*.sourceB.packetInterval = 125us
+*.sourceB.packetSize =  9720# in bytes
+
+[STM16]
+*.lteA.stmLevel = 16 #nivel que queremos stm-n 
+*.lteB.stmLevel = 16
+*.lteA.numTributaries = 1
+*.lteB.numTributaries = 1
+
+# Traffic generation
+*.sourceA.packetInterval = 125us
+*.sourceA.packetSize =  38880# in bytes
+
+
+*.sourceB.packetInterval = 125us
+*.sourceB.packetSize =  38880# in bytes
 
 
 [Protection]
