--- a/advancedRingNetwork/omnetpp.ini
+++ b/advancedRingNetwork/omnetpp.ini
@@ -9,6 +9,10 @@ sim-time-limit = 1s
 *.visualizer.*.displayLabels = true
 *.visualizer.*.animationSpeed = 20
 
+**.sdhadm*.pdhReceivedSignal.vector-recording = true
+**.sdhadm*.pdhTransmittedSignal.vector-recording = true
+**.sdhadm*.stmForwardedSignal.vector-recording = true
+
 # Tráfico fuente
 *.source*.packetInterval = 30us
 *.source*.packetSize = 300
@@ -16,4 +20,3 @@ sim-time-limit = 1s
 # STM niveles y tributarios
 **.stmLevel = 1
 **.numTributaries = 2
-
